fix(material/sidenav): prevent the content from jumping when hydrated (#29991)
Fixes that the content of the sidenav was jumping when the page is hydrated, because we can't measure the sidenav on the server.

(cherry picked from commit 4f00d26b274aa7b8fd04e7025c462ee91fe43994)

--- a/src/material/sidenav/drawer.scss
+++ b/src/material/sidenav/drawer.scss
@@ -109,6 +109,10 @@ $drawer-over-drawer-z-index: 4;
   height: 100%;
   overflow: auto;
 
+  &.mat-drawer-content-hidden {
+    opacity: 0;
+  }
+
   .mat-drawer-transition & {
     transition: {
       duration: variables.$swift-ease-out-duration;
